fix spacing of text on start page

--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -90,7 +90,7 @@ section {
 
 #play {
   margin-top: 100px;
-  margin-left: 40px;
+  margin-left: 30px;
 }
 
 /*#replay {
